<resources>
    <string name="app_name">Splinter_News</string>
    <string name="title">Splinter News</string>
    <string name="headline">Article Name</string>
    <string name="rating">Rating:</string>
    <string name="score">000</string>
    <string name="URL">https://news.ycombinator.com/</string>
    <string name="number">%1$s.</string>
    <string name="time">0 hours ago</string>
    <string name="recent">Recent Stories</string>
    <string name="best">Best Stories</string>
</resources>
